--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<div id="tabContainer">
          <div id="tabs__caption">
 			   <ul>
-               <li id="tabHeader_1">Первая вкладка</li>
-               <li id="tabHeader_2">Вторая вкладка</li>
-               <li id="tabHeader_3">Третья вкладка</li>
+               <li id="tabHeader_1">Sheet 1</li>
+               <li id="tabHeader_2">Sheet 2</li>
+               <li id="tabHeader_3">Sheet 3</li>
 			   </ul>
          </div>
 		<div id="tabs__content1">	
