--- a/index.html
+++ b/index.html
@@ -4,100 +4,18 @@
 		<meta charset="UTF-8"/>
 		<title>Document</title>
 		<link rel="stylesheet" href="style.css"/>
+      <script src="js/table.js"></script>
 		<script src="js/tab.js"></script>
-	</head>
+   </head>
 	<body>
 		<div id="tabContainer">
          <div id="tabs__caption">
-			   <ul>
+  			   <ul>
                <li id="tabHeader_1">Sheet 1</li>
                <li id="tabHeader_2">Sheet 2</li>
                <li id="tabHeader_3">Sheet 3</li>
-			   </ul>
+            </ul>
          </div>
-		<div id="tabs__content1">	
-			<table border="1">
-				<thead>
- 					<tr>
-  						<th></th><th>A</th><th>B</th>
-  						<th>C</th><th>D</th><th>E</th>
-  						<th>F</th><th>G</th><th>H</th>
-  						<th>I</th><th>J</th><th>K</th>
- 						<th>L</th><th>M</th><th>N</th>
-  						<th>O</th><th>P</th><th>Q</th>
-  						<th>R</th><th>S</th><th>T</th>
-  						<th>U</th><th>V</th><th>W</th>
-  						<th>X</th><th>Y</th><th>Z</th>
- 					</tr>
-				</thead>
-				 	<tr>
-  						<th>1</th>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td>
- 					</tr>
- 					<tr>
-  						<th>2</th>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td>
- 					</tr>
- 					<tr>
-  						<th>3</th>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td>
- 					</tr>
- 					<tr>
-  						<th>4</th>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td>
- 					</tr>
- 					<tr>
-  						<th>5</th>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td>
- 					</tr>
- 					<tr>
-  						<th>6</th>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td><td></td><td></td>
-  						<td></td><td></td>
- 					</tr>
-			</table>
-		</div>
-		<div id="tabs__content2">
-			<p>table2</p>
-		</div>
-		<div id="tabs__content3">
-			<p>table3</p>
-		</div>
-		</div>
+      </div>
 	</body>
-</html>
+</html> 
