--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 	<body>
 		<div id="tabContainer">
          <div id="tabs__caption">
-  			   <ul>
-               <li id="tabHeader_1">Sheet 1</li>
-               <li id="tabHeader_2">Sheet 2</li>
-               <li id="tabHeader_3">Sheet 3</li>
-            </ul>
+  			   <ul></ul>
+            <button id="newTab">+</button>
          </div>
       </div>
 	</body>
